@@ -14,7 +14,47 @@
 
 #include "jrlHumanoidDynamicRobot.h"
 
+/*! The creation of an object */
+class CjrlRobotDynamicsObjectFactory
+{
+public:
+  /**
+     \brief Construct and return a pointer to a dynamic robot.
+  */
+  CjrlDynamicRobot* createDynamicRobot()=0;
 
+  /**
+     \brief Construct and return a pointer to a humanoid dynamic robot.
+  */
+  CjrlHumanoidDynamicRobot* createhumanoidDynamicRobot()=0;
+
+  /**
+     \brief Construct and return a pointer to a freeflyer joint.
+     \param inInitialPosition position of the local frame of the joint when the robot is in initial configuration.
+     
+  */
+  CjrlJoint* createJointFreeflyer(const matrix4d& inInitialPosition)=0;
+
+  /**
+     \brief Construct and return a pointer to a rotation joint.
+     \param inInitialPosition position of the local frame of the joint when the robot is in initial configuration.
+     
+  */
+  CjrlJoint* createJointRotation(const matrix4d& inInitialPosition)=0;
+
+  /**
+     \brief Construct and return a pointer to a translation joint.
+     \param inInitialPosition position of the local frame of the joint when the robot is in initial configuration.
+     
+  */
+  CjrlJoint* createJointTranslation(const matrix4d& inInitialPosition)=0;
+
+  /**
+     \brief Construct and return a pointer to a body
+  */
+  CjrlBody* createBody()=0;
+
+};
 
 template <class CdynamicRobot, class ChumanoidDynamicRobot, class CjointFreeflyer, 
   class CjointRotation, class CjointTranslation, class Cbody> 
@@ -24,38 +64,38 @@ public:
   /**
      \brief Construct and return a pointer to a dynamic robot.
   */
-  static CjrlDynamicRobot* createDynamicRobot() {return new CdynamicRobot;}
+  static CjrlDynamicRobot* createDynamicRobot() __attribute__ ((deprecated)) {return new CdynamicRobot;}
 
   /**
      \brief Construct and return a pointer to a humanoid dynamic robot.
   */
-  static CjrlHumanoidDynamicRobot* createhumanoidDynamicRobot() {return new ChumanoidDynamicRobot();}
+  static CjrlHumanoidDynamicRobot* createhumanoidDynamicRobot() __attribute__ ((deprecated)) {return new ChumanoidDynamicRobot();}
 
   /**
      \brief Construct and return a pointer to a freeflyer joint.
      \param inInitialPosition position of the local frame of the joint when the robot is in initial configuration.
      
   */
-  static CjrlJoint* createJointFreeflyer(const matrix4d& inInitialPosition) {return new CjointFreeflyer(inInitialPosition);}
+  static CjrlJoint* createJointFreeflyer(const matrix4d& inInitialPosition) __attribute__ ((deprecated)) {return new CjointFreeflyer(inInitialPosition);}
 
   /**
      \brief Construct and return a pointer to a rotation joint.
      \param inInitialPosition position of the local frame of the joint when the robot is in initial configuration.
      
   */
-  static CjrlJoint* createJointRotation(const matrix4d& inInitialPosition) {return new CjointRotation(inInitialPosition);}
+  static CjrlJoint* createJointRotation(const matrix4d& inInitialPosition)  __attribute__ ((deprecated)) {return new CjointRotation(inInitialPosition);}
 
   /**
      \brief Construct and return a pointer to a translation joint.
      \param inInitialPosition position of the local frame of the joint when the robot is in initial configuration.
      
   */
-  static CjrlJoint* createJointTranslation(const matrix4d& inInitialPosition) {return new CjointTranslation(inInitialPosition);}
+  static CjrlJoint* createJointTranslation(const matrix4d& inInitialPosition)  __attribute__ ((deprecated)) {return new CjointTranslation(inInitialPosition);}
 
   /**
      \brief Construct and return a pointer to a body
   */
-  static CjrlBody* createBody() {return new Cbody();}
+  static CjrlBody* createBody()  __attribute__ ((deprecated)) {return new Cbody();}
 
 };
 
