@@ -1,3 +1,9 @@
+2009-07-05  Olivier Stasse  <olivier.stasse@aist.go.jp>
+
+	Proposal for abstract object factory.
+	* interfaces/jrlRobotDynamicsObjectConstructor.h: 
+	Adding CjrlRobotDunamicsObjectFactory.h .
+
 2009-06-30  Olivier Stasse  <olivier.stasse@aist.go.jp>
 
 	Removed Non abstract template implementation from Abstract Interface.
